add config view